[tool.poetry]
name = "aryzhkin_brain_games"
version = "1.1.0"
description = "A game made as part of the python course of hexlet.io"
authors = ["Andrey Ryzhkin <a.ryzkin@gmail.com>"]
maintainers = ["Andrey Ryzhkin <a.ryzkin@gmail.com>"]
repository = 'https://github.com/aryzhkin/python-project-lvl1'
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.even:main"
brain-calc = "brain_games.scripts.calc:main"
brain-gcd = "brain_games.scripts.gcd:main"
brain-progression = "brain_games.scripts.progression:main"
brain-prime = "brain_games.scripts.prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

